--- a/exercicios/pacote-projeto-d010/index.html
+++ b/exercicios/pacote-projeto-d010/index.html
@@ -21,6 +21,7 @@
     <main>
         <section>
             <h1>História do Mascote do Android</h1>
+            <button type="submit">benefícios</button>
             <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
             <article>
                 <h1 class="titulo">A primeira versão</h1>
