--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <article>
-            <div>
+            <div class="p1">
                 <p>Estou ficando cansado <br>
                     Da tal tecnologia <br>
                     Só se fala por e-mail <br>
@@ -24,7 +24,7 @@
                     Antes que eu caduque <br>
                     Vou dizer tudo em poesia.</p>
             </div>
-            <div>
+            <div class="p2">
                 <p>Não é mais como era antes <br>
                     É tudo abreviado<br>
                     "Você" só tem duas letras<br>
@@ -33,7 +33,7 @@
                     Basta botar uma flor<br>
                     E um coração desenhado.</p>
             </div>
-            <div>
+            <div class="p3">
                 <p>Arroba agora não pesa <br>
                     É parte de um endereço<br>
                     Ponto final nem se usa<br>
@@ -50,16 +50,16 @@
                     Pra entender como fica<br>
                     Decifre esse rabisco.</p>
             </div>
-            <div>
-                <p>Tenho saudade das cartas <br>
-                    Escritas com a própria mão <br>
+            <div class="p4">
+                <p>Tenho saudade das cartas<br>
+                    Escritas com a própria mão<br>
                     Mandava no mês de Junho <br>
-                    Só chegava no Verão
+                    Só chegava no Verão <br>
                     Mas matava a saudade <br>
                     Era texto de verdade <br>
                     Nas linhas do coração.</p>
             </div>
-            <div>
+            <div class="p5">
                 <p>
                     Agora, escrevo e envio  <br>
                     Chegando na mesma hora <br>
