--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -40,15 +40,15 @@
                     Ou vai até no começo<br>
                     Agora é .com<br>
                     Se o saite é muito bom<br>
-                    Ele vale um alto preço.<br>
-                    <br>
-                    Pra piorar a liguagem<br>
+                    Ele vale um alto preço.<br> </p>
+                  
+                <p> Pra piorar a liguagem<br>
                     O emoticom é um risco<br>
                     Tem símbolo para tudo<br>
                     Ponto e vírgula e um asterisco<br>
                     Um beijo significa<br>
                     Pra entender como fica<br>
-                    Decifre esse rabisco.</p>
+                    Decifre esse rabisco. </p>
             </div>
             <div class="p4">
                 <p>Tenho saudade das cartas<br>
@@ -60,6 +60,7 @@
                     Nas linhas do coração.</p>
             </div>
             <div class="p5">
+                
                 <p>
                     Agora, escrevo e envio  <br>
                     Chegando na mesma hora <br>
@@ -68,7 +69,8 @@
                     Abriu outro aplicativo <br>
                     O mundo ficou cativo <br>
                     Da tecnologia do agora. <br>
-                           <br>             
+                </p>
+                <p>         
                     Felizmente, pra orar <br>
                     Não precisa de internet <br>
                     Deus escuta todo mundo <br>
